/*
Copyright The Kubernetes Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/


// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto2";

package k8s.io.api.scheduling.v1alpha2;

import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/schema/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "k8s.io/api/scheduling/v1alpha2";

// BasicSchedulingPolicy indicates that standard Kubernetes
// scheduling behavior should be used.
message BasicSchedulingPolicy {
}

// GangSchedulingPolicy defines the parameters for gang scheduling.
message GangSchedulingPolicy {
  // MinCount is the minimum number of pods that must be schedulable or scheduled
  // at the same time for the scheduler to admit the entire group.
  // It must be a positive integer.
  //
  // +required
  // +k8s:alpha(since:"1.36")=+k8s:required
  // +k8s:alpha(since:"1.36")=+k8s:minimum=0
  optional int32 minCount = 1;
}

// PodGroup represents a runtime instance of pods grouped for gang scheduling.
// PodGroups are created by workload controllers (Job, LWS, JobSet, etc...) from
// Workload.podGroupTemplates. Each PodGroup corresponds to one replica of the Workload.
message PodGroup {
  // Standard object's metadata.
  // Name must be a DNS subdomain.
  //
  // +optional
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  // Spec defines the desired state of the PodGroup.
  //
  // +required
  optional PodGroupSpec spec = 2;

  // Status represents the current observed state of the PodGroup.
  //
  // +optional
  optional PodGroupStatus status = 3;
}

// PodGroupList contains a list of PodGroup resources.
message PodGroupList {
  // Standard list metadata.
  //
  // +optional
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  // Items is the list of PodGroups.
  repeated PodGroup items = 2;
}

// PodGroupSchedulingPolicy defines the scheduling configuration for a PodGroup.
// +union
message PodGroupSchedulingPolicy {
  // Basic specifies that the pods in this group should be scheduled using
  // standard Kubernetes scheduling behavior.
  //
  // +optional
  // +k8s:alpha(since:"1.36")=+k8s:optional
  // +oneOf=PolicySelection
  // +k8s:alpha(since:"1.36")=+k8s:unionMember
  optional BasicSchedulingPolicy basic = 2;

  // Gang specifies that the pods in this group should be scheduled using
  // all-or-nothing semantics.
  //
  // +optional
  // +k8s:alpha(since:"1.36")=+k8s:optional
  // +oneOf=PolicySelection
  // +k8s:alpha(since:"1.36")=+k8s:unionMember
  optional GangSchedulingPolicy gang = 3;
}

// PodGroupSpec defines the desired state of a PodGroup.
message PodGroupSpec {
  // PodGroupTemplateRef references the PodGroupTemplate within the Workload object that was used to create
  // the PodGroup.
  //
  // +optional
  optional PodGroupTemplateReference podGroupTemplateRef = 1;

  // SchedulingPolicy defines the scheduling policy for this instance of the PodGroup.
  // It is copied from the template on PodGroup creation.
  //
  // +required
  optional PodGroupSchedulingPolicy schedulingPolicy = 2;
}

// PodGroupStatus represents information about the status of a pod group.
message PodGroupStatus {
  // Conditions represent the latest observations of the PodGroup's state.
  //
  // Known condition types:
  // - "PodGroupScheduled": Indicates whether the scheduling requirement has been satisfied.
  //   - Status=True: All required pods have been assigned to nodes.
  //   - Status=False: Scheduling failed (i.e., timeout, unschedulable, etc.).
  //
  // Known reasons for PodGroupScheduled condition:
  // - "Scheduled": All required pods have been successfully scheduled.
  // - "Unschedulable": The PodGroup cannot be scheduled due to resource constraints,
  //   affinity/anti-affinity rules, or insufficient capacity for the gang.
  // - "Preempted": The PodGroup was preempted to make room for higher-priority workloads.
  // - "Timeout": The PodGroup failed to schedule within the configured timeout.
  //
  // +optional
  // +patchMergeKey=type
  // +patchStrategy=merge
  // +listType=map
  // +listMapKey=type
  repeated .k8s.io.apimachinery.pkg.apis.meta.v1.Condition conditions = 1;
}

// PodGroupTemplate represents a template for a set of pods with a common policy.
message PodGroupTemplate {
  // Name is a unique identifier for the PodGroup within the Workload.
  // It must be a DNS label. This field is immutable.
  //
  // +required
  // +k8s:alpha(since:"1.36")=+k8s:required
  // +k8s:alpha(since:"1.36")=+k8s:format=k8s-short-name
  optional string name = 1;

  // SchedulingPolicy defines the scheduling policy for this PodGroupTemplate.
  //
  // +required
  optional PodGroupSchedulingPolicy schedulingPolicy = 2;
}

// PodGroupTemplateReference references the PodGroupTemplate within the Workload object.
message PodGroupTemplateReference {
  // WorkloadName defines the name of the Workload object.
  //
  // +optional
  optional string workloadName = 1;

  // PodGroupTemplateName defines the PodGroupTemplate name within the Workload object.
  //
  // +optional
  optional string podGroupTemplateName = 2;
}

// TypedLocalObjectReference allows to reference typed object inside the same namespace.
message TypedLocalObjectReference {
  // APIGroup is the group for the resource being referenced.
  // If APIGroup is empty, the specified Kind must be in the core API group.
  // For any other third-party types, setting APIGroup is required.
  // It must be a DNS subdomain.
  //
  // +optional
  // +k8s:alpha(since:"1.36")=+k8s:optional
  // +k8s:alpha(since:"1.36")=+k8s:format=k8s-long-name
  optional string apiGroup = 1;

  // Kind is the type of resource being referenced.
  // It must be a path segment name.
  //
  // +required
  // +k8s:alpha(since:"1.36")=+k8s:required
  // +k8s:alpha(since:"1.36")=+k8s:format=k8s-path-segment-name
  optional string kind = 2;

  // Name is the name of resource being referenced.
  // It must be a path segment name.
  //
  // +required
  // +k8s:alpha(since:"1.36")=+k8s:required
  // +k8s:alpha(since:"1.36")=+k8s:format=k8s-path-segment-name
  optional string name = 3;
}

// Workload allows for expressing scheduling constraints that should be used
// when managing lifecycle of workloads from scheduling perspective,
// including scheduling, preemption, eviction and other phases.
message Workload {
  // Standard object's metadata.
  // Name must be a DNS subdomain.
  //
  // +optional
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  // Spec defines the desired behavior of a Workload.
  //
  // +required
  optional WorkloadSpec spec = 2;
}

// WorkloadList contains a list of Workload resources.
message WorkloadList {
  // Standard list metadata.
  //
  // +optional
  optional .k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  // Items is the list of Workloads.
  repeated Workload items = 2;
}

// WorkloadSpec defines the desired state of a Workload.
message WorkloadSpec {
  // ControllerRef is an optional reference to the controlling object, such as a
  // Deployment or Job. This field is intended for use by tools like CLIs
  // to provide a link back to the original workload definition.
  // When set, it cannot be changed.
  //
  // +optional
  // +k8s:alpha(since:"1.36")=+k8s:optional
  // +k8s:alpha(since:"1.36")=+k8s:update=NoModify
  optional TypedLocalObjectReference controllerRef = 1;

  // PodGroupTemplates is the list of templates that make up the Workload.
  // The maximum number of templates is 8. This field is immutable.
  //
  // +required
  // +listType=map
  // +listMapKey=name
  // +k8s:alpha(since:"1.36")=+k8s:required
  // +k8s:alpha(since:"1.36")=+k8s:listType=map
  // +k8s:alpha(since:"1.36")=+k8s:listMapKey=name
  // +k8s:alpha(since:"1.36")=+k8s:maxItems=8
  // +k8s:alpha(since:"1.36")=+k8s:immutable
  repeated PodGroupTemplate podGroupTemplates = 2;
}

